# Exercise-Manager

./: .clang-format  .gitignore  CMakeLists.txt
include/: lista.h  loader.h  pretty_print.h
lib/: CMakeLists.txt
lib/lista1/: CMakeLists.txt  lista.c
lib/lista2/: CMakeLists.txt  lista.c
src/: CMakeLists.txt  linux_loader.c  main.c  win_loader.c
